style.css
* {
 margin:0;
 padding:0;
 box-sizing: border-box;
 font-family: 'Times New Roman', Times, serif;
}

header {
 background: black;
 padding: 2rem;
}

header h1{
 color: white;
 text-align: center;
}

header a{
 text-decoration: none;
 color: white;
}

header a:hover{
 color: hotpink;
 transition: 1.5s;
}

.score-board{
 border: black solid 2px;
 width: 200px;
 margin: 20px auto;
 font-size: 40px;
 border-radius: 4px;
 text-align: center;
 padding: 15px 20px;
 position: relative;
}

.badge{
 background: #E2584D;
 color: white;
 font-size: 18px;
 padding: 2px 10px;
}

#user-label{
 position: absolute;
 top: 1.7rem;
 left: -2rem;
}

#comp-label{
 position: absolute;
 top: 1.7rem;
 right: -2rem;
}

.result{
 font-size: 3rem;
 font-weight: bold;
}

.result p{
 text-align: center;
}

.user-choices, .comp-choices{
 text-align: left;
 margin: 20px 150px;
}

.user-choices p, .comp-choices p{
 /* margin-left: 10%; */
 font-size: 2rem;
 padding: 1.5rem 0;
}

.choice{
 display: inline-block;
 border: 4px solid black;
 border-radius: 50%;
 padding: 30px;
 margin: 0px 20px;
 transition: all 0.5s ease;
}

.user-choices .choice:hover{
 cursor: pointer;
 background: black;
}

#action{
 text-align: left;
 margin-left: 17%;
 margin-top: 2%;
 font-size: 2rem;
 font-weight: bold;
}

.reset{
 margin-left: 46%;
 margin-top: 30px;
 padding: 20px;
 /* border-radius: 50%; */
 background-color: #4dcc7d;
 display: inline-block;
}

.reset p{
 text-align: center;
 font-size: 1.5rem;
 color: white;
}

.reset:hover{
 cursor: pointer;
 background-color: #E2584D;
 transition: 1s;
}

.win-green{
 border: 4px solid #4dcc7d;
 box-shadow: 0 0 50px green;
}

.lose-red{
 border: 4px solid #fc121b;
 box-shadow: 0 0 50px #d01115;
}

.tie-grey{
 border: 4px solid grey;
 box-shadow: 0 0 50px #464647;
}

.winner, .loser{
 display: none;
 margin-left: 35%;
 padding: 10px;
}

.tie{
 display: none;
 margin-left: 40%;
 padding: 15px 0 10px;
}

